<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".puzzleMain">

    <Button
        android:id="@+id/slide8"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:onClick="slide8"
        android:text="@string/Slide8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slide7" />

    <Button
        android:id="@+id/slide7"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:onClick="slide7"
        android:text="@string/Slide7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzle_solve_final" />

    <Button
        android:id="@+id/wolf"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:onClick="slide2"
        android:text="@string/Slide2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/farmer" />

    <Button
        android:id="@+id/slide6"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:onClick="slide6"
        android:text="@string/Slide6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slide5" />

    <Button
        android:id="@+id/farmer"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:onClick="slide1"
        android:text="@string/Slide1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzle_solve_start" />

    <Button
        android:id="@+id/slide5"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:onClick="slide5"
        android:text="@string/Slide5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cabbage" />

    <Button
        android:id="@+id/goat"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:onClick="slide3"
        android:text="@string/Slide3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wolf" />

    <Button
        android:id="@+id/cabbage"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:onClick="slide4"
        android:text="@string/Slide4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goat" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="50dp"
        android:onClick="reset"
        android:text="@string/Reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzle_solve_final" />

    <Button
        android:id="@+id/solve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:text="@string/Solve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:text="@string/Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/solve" />

    <TextView
        android:id="@+id/puzzle_solve_start"
        android:layout_width="147dp"
        android:layout_height="153dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:fontFamily="monospace"
        android:text="@string/FarmerStartView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/puzzle_solve_final"
        android:layout_width="144dp"
        android:layout_height="158dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="monospace"
        android:text="@string/FarmerFinalView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="73dp"
        android:layout_height="34dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="48dp"
        android:text="@string/Moves"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moveCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/pCongrat"
        android:layout_width="155dp"
        android:layout_height="78dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:text="@string/Empty"
        android:textColor="#E61010"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next" />

    <TextView
        android:id="@+id/pLegal"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:background="#009688"
        android:text="@string/Empty"
        android:textColor="#F10C0C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzle_solve_final" />

    <Spinner
        android:id="@+id/benchmark"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slide6" />


</androidx.constraintlayout.widget.ConstraintLayout>