<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707"
    android:backgroundTint="#009688"
    tools:context=".fwgcMain">

    <Button
        android:id="@+id/farmer"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="#E91E63"
        android:onClick="farmerAlone"
        android:text="@string/alone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzle_solve_start"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/wolf"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:onClick="wolf"
        android:text="@string/wolf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/farmer" />

    <Button
        android:id="@+id/goat"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:onClick="daGoat"
        android:text="@string/goat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wolf" />

    <Button
        android:id="@+id/cabbage"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:onClick="cabbage"
        android:text="@string/cabbage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goat" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="48dp"
        android:onClick="reset"
        android:text="@string/Reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzle_solve_final" />

    <Button
        android:id="@+id/solve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:text="@string/Solve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="48dp"
        android:text="@string/Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/solve" />

    <TextView
        android:id="@+id/puzzle_solve_start"
        android:layout_width="147dp"
        android:layout_height="153dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:fontFamily="monospace"
        android:text="@string/FarmerStartView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/puzzle_solve_final"
        android:layout_width="144dp"
        android:layout_height="158dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="monospace"
        android:text="@string/FarmerFinalView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="73dp"
        android:layout_height="34dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="48dp"
        android:text="@string/Moves"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moveCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/congrat"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Empty"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next" />

    <TextView
        android:id="@+id/mLegal"
        android:layout_width="159dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Empty"
        android:textColor="#E91E63"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzle_solve_final" />
</androidx.constraintlayout.widget.ConstraintLayout>